--- a/JDownloader-Demo/src/main/res/layout/activity_applist_item.xml
+++ b/JDownloader-Demo/src/main/res/layout/activity_applist_item.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="10dp"
     android:descendantFocusability= "blocksDescendants">
 
     <TextView
@@ -10,6 +11,12 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
         android:layout_weight="1" />
+
+    <TextView
+        android:id="@+id/txt_status"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"/>
 
     <Button
         android:id="@+id/btn_start"
